--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                                 <!-- Button to generate and download the pdf. Available for mobile. -->
                                 <div>
-                                    <a download="" href="./assets/pdf/ResumeCv.pdf" class="home__button-download">Download</a>
+                                    <a download="" href="./assets/pdf/myResume.pdf" class="home__button-download">Download</a>
                                 </div>
 
                             </div>
