update image profile

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <section class="home" id="home">
                         <div class="home__container section at-grid">
                             <div class="home__data at-grid">
-                                <img src="./assets/img/anton.jpg" class="home__img" alt="perfile">
+                                <img src="./assets/img/me-serious.png" class="home__img" alt="perfile">
 
                                 <h1 class="home__title">Tong <b>Quang Anh</b></h1>
 
